...
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ids.androidsong.ui.NuevaCancion"
    tools:showIn="@layout/activity_nueva_cancion">

    <Button
        android:id="@+id/cancion_pre_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
...
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:visibility="visible"
        tools:background="@color/common_google_signin_btn_text_light_default"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_above="@id/cancion_pre_guardar">

        <LinearLayout
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/nueva_cancion_carpeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/imageButton"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Título" />

            <EditText
                android:id="@+id/nueva_cancion_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="..."
                android:inputType="textCapWords" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapWords"
                android:text="Autor/Intérprete" />

            <EditText
                android:id="@+id/nueva_cancion_autor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="..."
                android:inputType="textPersonName" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Letra" />

            <EditText
                android:id="@+id/nueva_cancion_letra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/hint_editar_cancion"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tono original" />

            <EditText
                android:id="@+id/nueva_cancion_tono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="..."
                android:inputType="textPersonName" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TCapo/Transporte" />

            <EditText
                android:id="@+id/nueva_cancion_transporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="..."
                android:inputType="textPersonName" />
...
