<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Switch
        android:id="@+id/mostrar_acordes_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""
        android:textOff="Ocultar Canciones"
        android:textOn="Mostrar Canciones"
        tools:text="Mostar Acordes" />
</LinearLayout>