<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView android:id = "@+id/cancion_lista_item_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Titulo"
        android:gravity="start"
        android:textSize="18sp">
    </TextView>

        <TextView android:id = "@+id/cancion_lista_item_carpeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="Carpeta"
            android:gravity="end"
            android:textSize="16sp">
...
